# jbindgen

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  publish-annotations.yml
android-test-activity/: .gitignore  Cargo.toml  README.md  build.rs  settings.gradle
android-test-activity/app/: build.gradle
android-test-activity/app/src/main/java/io/github/jni_rs/jbindgen/testactivity/: TestActivity.java
android-test-activity/src/: lib.rs
android-test-activity/src/sdk/: bluetooth.rs  content_intent.rs  net_uri.rs  os_binder.rs  os_build.rs  util_time_utils.rs
android-test-activity/tests/: android_test_activity.rs
annotations/: .gitignore  Cargo.toml  PUBLISHING.md  README.md  build.gradle  settings.gradle
annotations/src/: lib.rs
jbindgen/: CHANGELOG.md  Cargo.toml  build.rs
jbindgen/examples/: basic.rs
jbindgen/src/: cafebabe_parser.rs  lib.rs
jbindgen/tests/: android_sdk.rs  annotations.rs  runtime_tests.rs  type_map_test.rs
jbindgen/tests/java/: RustSkipTest.java
