[package]
name = "jbindgen"
version = "0.1.0"
readme = "README.md"
description = "A library and CLI tool for generating Rust JNI bindings by parsing Java APIs"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
include = ["/src", "build.rs", "/examples"]

[[bin]]
name = "jbindgen"
path = "src/bin/main.rs"

[dependencies]
jbindgen-annotations = { version = "=0.1.0", path = "../annotations" }
jni = { workspace = true, features = ["invocation"] }

log.workspace = true
pretty_env_logger = "0.5"
cafebabe.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
zip = "7"

[build-dependencies]
javac.workspace = true
zip = "7"

[dev-dependencies]
javac.workspace = true
